kubernetes/apps/ai/ipex-llm/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ipex-llm
  namespace: ai
  labels:
    gethomepage.dev/enabled: "true"
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "IPEX-LLM"
    gethomepage.dev/description: "Intel IPEX-LLM inference server"
    gethomepage.dev/group: "AI"
    gethomepage.dev/icon: "intel.png"
    external-dns.alpha.kubernetes.io/target: &host "ipex-llm.${SECRET_DOMAIN}"
spec:
  ingressClassName: "internal"
  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ipex-llm
                port:
                  number: 8000
  tls:
    - hosts:
        - *host
